# rust-mersenne-twister

./: Cargo.toml
src/: lib.rs  mt19937.rs  mt19937_64.rs
