[package]
name = "mersenne_twister"
version = "0.1.0"
edition = "2021"
authors = ["David Creswick <dcrewi@gyrae.net>", "Deyao Chen <chendeyao000@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Mersenne Twister pseudorandom number generator"
repository = "https://github.com/dcrewi/rust-mersenne-twister"
documentation = "https://docs.rs/mersenne_twister/"
readme = "README.md"
keywords = ["random", "rand", "rng", "algorithm", "mersenne"]
categories = ["algorithms", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[dependencies]
rand_core = "0.6"

[dev-dependencies]
# For easy testing
rand = "0.8"

[badges]
travis-ci = { repository = "dcrewi/rust-mersenne-twister" }
maintenance = { status = "passively-maintained" }
